# llm-jp-eval-inference

./: pyproject.toml
inference-modules/transformers/: offline_inference_transformers.py  pyproject.toml
src/llm_jp_eval_inference/: generator.py  schemas.py  transformers_schemas.py  utility.py
